# Schemes_scrapper

./: .gitattributes  .gitignore  FRONTEND_API_DOCS.md  Infou_ICS_Master_Launch_Playbook.docx  README.md  check_pinecone.cmd  client_profile.json  generate_pdfs.cmd  inject_pinecone.cmd  pyproject.toml  requirements.txt  run_api.cmd  run_pipeline.cmd  test_api.py  test_llm.cmd  test_llm.py
config/: settings.yaml
data/input/: sample_schemes.csv
runs/run_20260418_1703/: checkpoint.json  enriched_schemes.csv
runs/run_20260419_1745/: checkpoint.json  enriched_schemes.csv
runs/run_20260419_1745/artifacts/row-2-pm-setu/: report.md  (+9 more)
runs/run_20260501_2311/: enriched_schemes.csv
runs/run_20260522_1229/: checkpoint.json  enriched_schemes.csv
runs/run_20260522_1248/: checkpoint.json  enriched_schemes.csv
runs/run_20260614_1703/: checkpoint.json  enriched_schemes.csv
src/scheme_scraper/: __init__.py  config.py  generate_reports.py  main.py  models.py  utils.py
src/scheme_scraper/api/: main.py
src/scheme_scraper/crawler/: __init__.py  agent.py  driver.py  navigator.py
src/scheme_scraper/extract/: __init__.py  doc_extract.py  html_extract.py
src/scheme_scraper/llm/: consultant_prompts.py  nvidia_client.py  prompts.py  schema.py
src/scheme_scraper/output/: __init__.py  pdf_converter.py  writers.py
src/scheme_scraper/pipeline/: convert_latest_run_to_pdf.py  evidence_synthesizer.py  generate_proposals.py  multi_agent.py  pipeline_summary.py  report_generator.py  runner.py  vectorstore_check.py  vectorstore_ingest.py
tests/: test_html_extract.py  test_utils.py
(+3572 files in other folders)
