[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scheme-scraper"
version = "0.1.0"
description = "Industry-grade Selenium crawler and NVIDIA LLM enrichment pipeline for scheme intelligence"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Scheme Scraper Team" }
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "openai>=1.40.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pypdf>=4.3.1",
  "python-docx>=1.1.2",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "requests>=2.32.3",
  "selenium>=4.24.0",
  "tenacity>=9.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.2"
]

[project.scripts]
scheme-scraper = "scheme_scraper.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
